fix footer alignement

--- a/componets/headers/header_1/assets/css/main.scss
+++ b/componets/headers/header_1/assets/css/main.scss
@@ -565,8 +565,11 @@ start product grid   **/
         display: flex;
         justify-content: space-between;
         .section {
-            width: 25%;
+            // width: 25%;
             overflow: hidden;
+            @media (max-width: 425px) {
+                text-align: center;
+            }
             ul {
                 list-style: none;
                 padding: 0;
